--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -357,6 +357,7 @@ main {
 
 	user-select: none;
 	-webkit-user-select: none;
+	-moz-user-select: none;
 }
 
 #color-picker {
@@ -394,7 +395,6 @@ input[type='range']::-webkit-slider-runnable-track {
 	width: 100%;
 	height: 4px;
 	cursor: pointer;
-	animate: 0.2s;
 	box-shadow: 0px 0px 0px #000000;
 	background: #cccbcb;
 	border-radius: 5px;
@@ -418,7 +418,7 @@ input[type='range']::-moz-range-track {
 	width: 100%;
 	height: 4px;
 	cursor: pointer;
-	animate: 0.2s;
+
 	box-shadow: 0px 0px 0px #000000;
 	background: #cccbcb;
 	border-radius: 5px;
@@ -437,7 +437,7 @@ input[type='range']::-ms-track {
 	width: 100%;
 	height: 4px;
 	cursor: pointer;
-	animate: 0.2s;
+
 	background: transparent;
 	border-color: transparent;
 	color: transparent;
