fixed several style issues on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -192,7 +192,8 @@ main {
 .icons-container {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr auto;
+	grid-template-rows: 1fr auto auto;
+	align-items: center;
 }
 
 .icons-input > label {
