--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -207,7 +207,7 @@ main {
 
 	display: flex;
 
-	margin: 0.5em 1em;
+	margin: 1em 1em;
 	padding: 1.4em 1.4em;
 
 	border-radius: 5px;
@@ -249,8 +249,8 @@ main {
 	box-shadow: 0px 0px 0px 2px rgba(64, 128, 204, 1);
 }
 
-.icons-input:focus-within i {
-	color: var(--color-dark);
+.icons-input:focus-within svg {
+	color: var(--color-accent);
 }
 
 .icons-style {
@@ -259,7 +259,7 @@ main {
 	display: flex;
 	flex-direction: column;
 
-	max-height: 5em;
+	max-height: 50px;
 	overflow: hidden;
 	transition: 0.45s ease-out;
 }
@@ -299,7 +299,7 @@ main {
 	margin: 0 1em;
 	padding: 0 1em;
 
-	height: 4em;
+	height: 50px;
 }
 
 .icons-style-control h3 {
