--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -48,6 +48,8 @@ a:hover {
 	border: 1px solid var(--color-shade);
 	border-radius: 5px;
 
+	background: var(--color-main);
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -191,7 +193,7 @@ main {
 }
 
 .title-links a {
-	margin: 0.5em 0.5em;
+	margin: 0.5em 0.8em;
 	font-size: 1.6em;
 }
 
